Change title and header text in index.html

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>لعبة جدول الضرب</title>
+  <title>تحدي الضرب</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header class="hero">
-    <h1>لعبة جدول الضرب</h1>
-    <p class="subtitle">اختبار ممتع لجدول ٢ إلى ٩ لطلاب الصف الأول المتوسط</p>
+    <h1>تحدي الضرب</h1>
+    <p class="subtitle">تصميم وإعداد/ أ. عمرو ظافر العمري </p>
   </header>
 
   <main>
