--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <header class="hero">
     <h1>تحدي الضرب</h1>
     <p class="subtitle">تصميم وإعداد/ أ. عمرو ظافر العمري </p>
+       <div class="meta-value">مدرسة سعيد بن المسيب الابتدائية</div>
+        <div class="meta-value">تصميم الأستاذ / عمر ظافر العمري</div>
+        <div class="meta-value">مدير المدرسة / عبد الرحمن نقاز</div>
   </header>
 
   <main>
