Add reset button to index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+    <!-- زر إعادة تعيين (اختياري) -->
+  <button id="resetBtn" class="reset-btn" aria-label="إعادة تعيين الشبكة">↺ إعادة تعيين</button>
   <header class="hero">
     <h1>تحدي الضرب</h1>
 
