Correct designer's name in index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>تحدي الضرب</h1>
 
        <div class="meta-value">مدرسة سعيد بن المسيب الابتدائية</div>
-        <div class="meta-value">تصميم الأستاذ / عمر ظافر العمري</div>
+        <div class="meta-value">تصميم الأستاذ / عمرو ظافر العمري</div>
         <div class="meta-value">مدير المدرسة / عبد الرحمن نقاز</div>
   </header>
 
